PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2015 PHP 5.4.44

09 Jul 2015 PHP 5.4.43

- Core:
  . Fixed bug #69768 (escapeshell*() doesn't cater to !). (cmb)
  . Fixed bug #69874 (Can't set empty additional_headers for mail()), regression
    from fix to bug #68776. (Yasuo)

- Mysqlnd:
  . Fixed bug #69669 (mysqlnd is vulnerable to BACKRONYM) (CVE-2015-3152).
    (Andrey)

- Phar:
  . Fixed bug #69958 (Segfault in Phar::convertToData on invalid file). (Stas)
  . Fixed bug #69923 (Buffer overflow and stack smashing error in 
    phar_fix_filepath). (Stas)

11 Jun 2015 PHP 5.4.42

- Core:
  . Imroved fix for bug #69545 (Integer overflow in ftp_genlist() resulting in
    heap overflow). (CVE-2015-4643) (Max Spelsberg)
  . Fixed bug #69646 (OS command injection vulnerability in escapeshellarg).
    (CVE-2015-4642) (Anatol Belski)
  . Fixed bug #69719 (Incorrect handling of paths with NULs). (Stas)

- Litespeed SAPI:
  . Fixed bug #68812 (Unchecked return value). (George Wang)

- Mail:
  . Fixed bug #68776 (mail() does not have mail header injection prevention for
    additional headers). (Yasuo)

- Postgres:
  . Fixed bug #69667 (segfault in php_pgsql_meta_data). (CVE-2015-4644) (Remi)

- Sqlite3:
  . Upgrade bundled sqlite to 3.8.10.2. (CVE-2015-3414, CVE-2015-3415,
    CVE-2015-3416) (Kaplan)

14 May 2015 PHP 5.4.41

- Core: 
  . Fixed bug #69364 (PHP Multipart/form-data remote dos Vulnerability).
    (CVE-2015-4024) (Stas)
  . Fixed bug #69403 (str_repeat() sign mismatch based memory corruption). 
    (Stas)
  . Fixed bug #69418 (CVE-2006-7243 fix regressions in 5.4+). (CVE-2015-4025)
    (Stas)
  . Fixed bug #69522 (heap buffer overflow in unpack()). (Stas)
  
- FTP:
  . Fixed bug #69545 (Integer overflow in ftp_genlist() resulting in heap
    overflow). (CVE-2015-4022) (Stas)

- PCNTL: